Feature: Allow access to TLS peer certificate check

--- a/configure.ac
+++ b/configure.ac
@@ -75,6 +75,8 @@ dnl Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_TIME
 AC_CHECK_HEADERS([strings.h sys/timeb.h arpa/inet.h])
+AC_CHECK_HEADERS([stdarg.h], [SHOUT_STDARG=1], [SHOUT_STDARG=0])
+AC_SUBST(SHOUT_STDARG)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
