Feature: Allow accessing all of the certificate chain
This is based on a patch by Stephan Jauernick <info@stephan-jauernick.de>

--- a/include/shout/shout.h.in
+++ b/include/shout/shout.h.in
@@ -86,6 +86,7 @@ extern "C" {
 typedef enum {
     SHOUT_CONTROL__MIN = 0,
     SHOUT_CONTROL_GET_SERVER_CERTIFICATE_AS_PEM,
+    SHOUT_CONTROL_GET_SERVER_CERTIFICATE_CHAIN_AS_PEM,
     SHOUT_CONTROL__MAX = 32767
 } shout_control_t;
 
