--- a/include/shout/shout.h.in
+++ b/include/shout/shout.h.in
@@ -56,6 +56,22 @@ extern "C" {
 /* backward-compatibility alias */
 #define SHOUT_FORMAT_VORBIS         SHOUT_FORMAT_OGG
 
+/* Usages */
+#define SHOUT_USAGE_AUDIO           (0x0001U) /* Audio substreams*/
+#define SHOUT_USAGE_VISUAL          (0x0002U) /* Picture/Video substreams (most often combined with SHOUT_USAGE_AUDIO) */
+#define SHOUT_USAGE_TEXT            (0x0004U) /* Text substreams that are not subtitles */
+#define SHOUT_USAGE_SUBTITLE        (0x0008U) /* Subtitle substreams */
+#define SHOUT_USAGE_LIGHT           (0x0010U) /* Light control substreams */
+#define SHOUT_USAGE_UI              (0x0020U) /* User interface data, such as DVD menus or buttons */
+#define SHOUT_USAGE_METADATA        (0x0040U) /* Substreams that include metadata for the stream */
+#define SHOUT_USAGE_APPLICATION     (0x0080U) /* Application specific data substreams */
+#define SHOUT_USAGE_CONTROL         (0x0100U) /* Substreams that control the infrastructure */
+#define SHOUT_USAGE_COMPLEX         (0x0200U) /* Substreams that are themself a mixture of other types */
+#define SHOUT_USAGE_OTHER           (0x0400U) /* Substream of types not listed here */
+#define SHOUT_USAGE_UNKNOWN         (0x0800U) /* The stream MAY contain additional substreams of unknown nature */
+#define SHOUT_USAGE_3D              (0x1000U) /* The Stream contains information for 3D playback */
+#define SHOUT_USAGE_4D              (0x2000U) /* The Stream contains information for 4D/XD playback */
+
 #define SHOUT_PROTOCOL_HTTP         (  0)
 #define SHOUT_PROTOCOL_XAUDIOCAST   (  1) /* Deprecated. May be removed in future versions. Do not use. */
 #define SHOUT_PROTOCOL_ICY          (  2)
@@ -213,6 +229,9 @@ unsigned int shout_get_public(shout_t *self);
 /* takes a SHOUT_FORMAT_xxxx argument */
 int shout_set_format(shout_t *self, unsigned int format);
 unsigned int shout_get_format(shout_t *self);
+
+int shout_set_content_format(shout_t *self, unsigned int format, unsigned int usage, const char *codecs);
+int shout_get_content_format(shout_t *self, unsigned int *format, unsigned int *usage, const char **codecs);
 
 /* takes a SHOUT_PROTOCOL_xxxxx argument */
 int shout_set_protocol(shout_t *self, unsigned int protocol);
