Fix: Corrected static linking when OpenSSL is enabled.
Thanks to Jörg Krause to pointing this out.

Fixes: #2307

--- a/configure.ac
+++ b/configure.ac
@@ -197,6 +197,7 @@ XIPH_PATH_OPENSSL([
     XIPH_VAR_APPEND([XIPH_CPPFLAGS],[$OPENSSL_CFLAGS])
     XIPH_VAR_APPEND([XIPH_LDFLAGS],[$OPENSSL_LDFLAGS])
     XIPH_VAR_PREPEND([XIPH_LIBS],[$OPENSSL_LIBS])
+    SHOUT_REQUIRES="$SHOUT_REQUIRES, libssl"
     SHOUT_TLS="1"
     ],
     [ AC_MSG_NOTICE([SSL disabled!])
